Refactor code to separate logic from views. Rename to nrm.
